test/files/neg/t6357.scala
object K {
   def q = {
      final class Y(val j: Int) extends AnyVal
      3
   }
}
